tests/NormalTests/paczka1/fuzzy1/94023660.err
Error in line 1: S979 S966 59,3
Error in line 7: wlKkT S979 40,93
Error in line 2: wlKkT S428 99,1
Error in line 12: FSzI S966 14,4
Error in line 18: jbq31WzX S?28 73,9
Error in line 10: wlKkT S979 104,8
Error in line 11: x6eP5ycz3 S428 29,9
Error in line 14: FSzI S227 44,2
Error in line 25: wlKkT S966 172,2
Error in line 33: kv9OzDVDsBf S966 45,4
